Updated UnitTest